objects/Lead.object
<CustomObject>
    <fields>
        <fullName>sf42_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia/Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Camerun</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cape Verde</fullName>
                </value>
                <value>
                    <fullName>Caribbean</fullName>
                </value>
                <value>
                    <fullName>Central African Republic</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Côte d&apos;Ivoire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Material__c</fullName>
        <label>Material</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aluminium</fullName>
                </value>
                <value>
                    <fullName>Brass</fullName>
                </value>
                <value>
                    <fullName>Carbon steel</fullName>
                </value>
                <value>
                    <fullName>Copper</fullName>
                </value>
                <value>
                    <fullName>Precious metals</fullName>
                </value>
                <value>
                    <fullName>Stainless steel</fullName>
                </value>
                <value>
                    <fullName>Titanium</fullName>
                </value>
                <value>
                    <fullName>Tungsten</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Product_Interest__c</fullName>
        <label>Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALI - Demo Rig</fullName>
                </value>
                <value>
                    <fullName>ALI - GEO bore</fullName>
                </value>
                <value>
                    <fullName>ALI - GEOCenter</fullName>
                </value>
                <value>
                    <fullName>ALI - GEO fltaness/straightness</fullName>
                </value>
                <value>
                    <fullName>ALI - GEO online</fullName>
                </value>
                <value>
                    <fullName>ALI - GEO others</fullName>
                </value>
                <value>
                    <fullName>ALI - GEO turbines</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN touch</fullName>
                </value>
                <value>
                    <fullName>ALI - ROTALIGN touch</fullName>
                </value>
                <value>
                    <fullName>ALI - ROTALIGN touch DEMO</fullName>
                </value>
                <value>
                    <fullName>ALI - Service Laser Tracker</fullName>
                </value>
                <value>
                    <fullName>ALI - Service Machinery</fullName>
                </value>
                <value>
                    <fullName>ALI - Service PARALIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - Shaft entry</fullName>
                </value>
                <value>
                    <fullName>ALI - Shaft expert</fullName>
                </value>
                <value>
                    <fullName>ALI - Shaft Expert Module</fullName>
                </value>
                <value>
                    <fullName>ALI - Shaft mid range</fullName>
                </value>
                <value>
                    <fullName>ALI - Z Accessories</fullName>
                </value>
                <value>
                    <fullName>ALI - Z PULLALIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - Z Shims</fullName>
                </value>
                <value>
                    <fullName>CM -  Accessories</fullName>
                </value>
                <value>
                    <fullName>CM - Consulting Service (S)</fullName>
                </value>
                <value>
                    <fullName>CM - Noise and Ultrasound Service (S)</fullName>
                </value>
                <value>
                    <fullName>CM - Oil Analysis Service (S)</fullName>
                </value>
                <value>
                    <fullName>CM - OMNITREND Center</fullName>
                </value>
                <value>
                    <fullName>CM - OMNITREND Full version</fullName>
                </value>
                <value>
                    <fullName>CM - OMNITREND WEB</fullName>
                </value>
                <value>
                    <fullName>CM - On-Site Condition Monitoring Service (S)</fullName>
                </value>
                <value>
                    <fullName>CM - Power Quality Measurement Service (S)</fullName>
                </value>
                <value>
                    <fullName>CM - Remote Condition Monitoring (S)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Tube</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_Production_Mode__c</fullName>
        <label>Production Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Brazed</fullName>
                </value>
                <value>
                    <fullName>Cast</fullName>
                </value>
                <value>
                    <fullName>Cold drawn</fullName>
                </value>
                <value>
                    <fullName>Cold heading</fullName>
                </value>
                <value>
                    <fullName>Extruded</fullName>
                </value>
                <value>
                    <fullName>Flexographic</fullName>
                </value>
                <value>
                    <fullName>Hot rolled</fullName>
                </value>
                <value>
                    <fullName>Offset</fullName>
                </value>
                <value>
                    <fullName>Peeled</fullName>
                </value>
                <value>
                    <fullName>Polished</fullName>
                </value>
                <value>
                    <fullName>Rotogravure</fullName>
                </value>
                <value>
                    <fullName>Seamless</fullName>
                </value>
                <value>
                    <fullName>Welded</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_ca_Hear_About__c</fullName>
        <label>CA How did you hear about us</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Internet</fullName>
                </value>
                <value>
                    <fullName>Ludeca</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Pruftechnik Web Site</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_ca_Preferred_Language__c</fullName>
        <label>CA Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_ca_Products__c</fullName>
        <label>CA Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aligneo</fullName>
                </value>
                <value>
                    <fullName>Optalign</fullName>
                </value>
                <value>
                    <fullName>Rotalign</fullName>
                </value>
                <value>
                    <fullName>Vibxpert</fullName>
                </value>
                <value>
                    <fullName>Vibscanner</fullName>
                </value>
                <value>
                    <fullName>Wearscanner</fullName>
                </value>
                <value>
                    <fullName>Vibrotip</fullName>
                </value>
                <value>
                    <fullName>Vibnode</fullName>
                </value>
                <value>
                    <fullName>Vibroweb</fullName>
                </value>
                <value>
                    <fullName>Vibroweb XP</fullName>
                </value>
                <value>
                    <fullName>Vibronet Signalmaster</fullName>
                </value>
                <value>
                    <fullName>Inclineo</fullName>
                </value>
                <value>
                    <fullName>SmartAlign</fullName>
                </value>
                <value>
                    <fullName>Smartscanner</fullName>
                </value>
                <value>
                    <fullName>Pullalign</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_ca_Salutation_French__c</fullName>
        <formula>CASE(Salutation ,&quot;Mr.&quot;,&quot;M. &quot;, &quot;Mrs.&quot;, &quot;Mme &quot;, &quot;Ms.&quot;,&quot;Mme&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Salutation French</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_ca_Services__c</fullName>
        <label>CA Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Condition Monitoring</fullName>
                </value>
                <value>
                    <fullName>Paralign</fullName>
                </value>
                <value>
                    <fullName>Shaft Alignment</fullName>
                </value>
                <value>
                    <fullName>Centralign</fullName>
                </value>
                <value>
                    <fullName>Yardalign</fullName>
                </value>
                <value>
                    <fullName>Data Collection</fullName>
                </value>
                <value>
                    <fullName>Balancing</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Temporary Telediagnosis</fullName>
                </value>
                <value>
                    <fullName>Permalign</fullName>
                </value>
                <value>
                    <fullName>Hydralign</fullName>
                </value>
                <value>
                    <fullName>Torque Measurement</fullName>
                </value>
                <value>
                    <fullName>Vibration Measurement</fullName>
                </value>
                <value>
                    <fullName>Acceptance Test</fullName>
                </value>
                <value>
                    <fullName>Machinery Service</fullName>
                </value>
                <value>
                    <fullName>Online Condition Monitoring</fullName>
                </value>
                <value>
                    <fullName>Portable CM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_Akademic_Title__c</fullName>
        <label>Akademic Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>B.Eng.</fullName>
                </value>
                <value>
                    <fullName>B.Sc.</fullName>
                </value>
                <value>
                    <fullName>Betr. Ing.</fullName>
                </value>
                <value>
                    <fullName>DI</fullName>
                </value>
                <value>
                    <fullName>DI (FH)</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Betriebsw. (FH)</fullName>
                </value>
                <value>
                    <fullName>Dipl.Inf.</fullName>
                </value>
                <value>
                    <fullName>Dipl.Inf. (FH)</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Ing.</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Ing. (BA)</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Ing. (FH)</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Ing. (TU)</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Ing. oec.</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Kfm.</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Kfm. (FH)</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Phys.</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Wirt.-Ing. (FH)</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Wirtsch.-Ing.</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Wirtsch.-Ing. (FH)</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Dr. hc</fullName>
                </value>
                <value>
                    <fullName>Dr.-Ing.</fullName>
                </value>
                <value>
                    <fullName>Dr. rer. nat</fullName>
                </value>
                <value>
                    <fullName>Dr. rer. nat Dipl.-Ing.</fullName>
                </value>
                <value>
                    <fullName>Ing.</fullName>
                </value>
                <value>
                    <fullName>Ing. (grad.)</fullName>
                </value>
                <value>
                    <fullName>M.Eng.</fullName>
                </value>
                <value>
                    <fullName>M.Sc.</fullName>
                </value>
                <value>
                    <fullName>Magister Dr.</fullName>
                </value>
                <value>
                    <fullName>Obering.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_City_PO_Box__c</fullName>
        <label>City (for PO Box)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Function__c</fullName>
        <label>Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_PO_Box__c</fullName>
        <label>PO Box</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Position__c</fullName>
        <inlineHelpText>Please enter job title as printed on the business card.</inlineHelpText>
        <label>OO: Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Integrator</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>PT-AG Agent</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_UNID__c</fullName>
        <externalId>true</externalId>
        <label>UNID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_ZIP_for_PO_Box__c</fullName>
        <label>ZIP (for PO Box)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_gl_ALI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ALI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_CM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_gl_Executive_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executive Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_NDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_Your_Message__c</fullName>
        <label>Last Customer Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_jp_City__c</fullName>
        <label>City EN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Company_Read__c</fullName>
        <label>JP Company how to read</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Company_jp__c</fullName>
        <label>Company Name Local</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Department__c</fullName>
        <label>JP Department JP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Department_en__c</fullName>
        <label>JP Department EN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_First_Name_jp__c</fullName>
        <label>First Name Local</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Last_Name_jp__c</fullName>
        <label>Last Name Local</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Title_jp__c</fullName>
        <label>Title Local</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Visited_Trade_Fair__c</fullName>
        <label>JP Visit Trade Fair</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Welding show 2010</fullName>
                </value>
                <value>
                    <fullName>JIMA 2010</fullName>
                </value>
                <value>
                    <fullName>2014-Maintnaice show with T-Nov</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Canada_Billing_State_validation_rule</fullName>
        <active>true</active>
        <description>Validate Canada state name. Must be AB, QC, NT, ON, PEI, NL, YU, BC,NU, NS, NB, MB, SK or empty. Exception for Leads which came from capping. If there is any Campaign ID then state is not validated.</description>
        <errorConditionFormula>CampaignId   = &quot;&quot;  &amp;&amp; Country  = &quot;Canada&quot;   &amp;&amp; CONTAINS (Text($User.sf42_Business_Unit__c) , &apos;Canada&apos;)  &amp;&amp; AND(
State &lt;&gt; &quot;AB&quot;,
State &lt;&gt; &quot;QC&quot;,
State &lt;&gt; &quot;NT&quot;, 
State &lt;&gt; &quot;ON&quot;, 
State &lt;&gt; &quot;PEI&quot;,
State &lt;&gt; &quot;NL&quot;,
State &lt;&gt; &quot;YU&quot;,
State &lt;&gt;  &quot;BC&quot;,
State &lt;&gt;  &quot;NU&quot;,
State &lt;&gt;  &quot;NS&quot;,
State &lt;&gt;  &quot;NB&quot;,
State &lt;&gt;  &quot;MB&quot;,
State &lt;&gt;  &quot;SK&quot;
)</errorConditionFormula>
        <errorDisplayField>State</errorDisplayField>
        <errorMessage>State name is not valid. Please use: 
AB, QC, NT, ON, PEI, NL, YU, BC,NU, NS, NB, MB or SK.
It is mandatory to put state name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IT_Salutation_Mandatory</fullName>
        <active>true</active>
        <description>Salutation field is mandatory for Italy.</description>
        <errorConditionFormula>AND (ISPICKVAL($User.sf42_Business_Unit__c ,&quot;Italy&quot;), ISPICKVAL(Salutation, &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Salutation</errorDisplayField>
        <errorMessage>Salutation is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Industry_active_values_validation</fullName>
        <active>false</active>
        <description>To check Active Industry</description>
        <errorConditionFormula>OR (
NOT(ISPICKVAL( Industry,&quot;Aerospace&quot;)),
NOT(ISPICKVAL( Industry,&quot;Automation / Engineering&quot;)),
NOT(ISPICKVAL( Industry,&quot;Automotive&quot;)),
NOT(ISPICKVAL( Industry,&quot;Cable Car&quot;)),
NOT(ISPICKVAL( Industry,&quot;Cement&quot;)),
NOT(ISPICKVAL( Industry,&quot;Chemicals&quot;)),
NOT(ISPICKVAL( Industry,&quot;Converting / Packing&quot;)),
NOT(ISPICKVAL( Industry,&quot;Education&quot;)),
NOT(ISPICKVAL( Industry,&quot;Facilities&quot;)),
NOT(ISPICKVAL( Industry,&quot;Food &amp; Beverage&quot;)),
NOT(ISPICKVAL( Industry,&quot;IT / Electronics&quot;)),
NOT(ISPICKVAL( Industry,&quot;Logistics&quot;)),
NOT(ISPICKVAL( Industry,&quot;Machine Manufacturers&quot;)),
NOT(ISPICKVAL( Industry,&quot;Maintenance&quot;)),
NOT(ISPICKVAL( Industry,&quot;Manufacturing / Production&quot;)),
NOT(ISPICKVAL( Industry,&quot;Marine &amp; Shipping&quot;)),
NOT(ISPICKVAL( Industry,&quot;Metal&quot;)),
NOT(ISPICKVAL( Industry,&quot;Mining&quot;)),
NOT(ISPICKVAL( Industry,&quot;Oil &amp; Gas / Petrochemicals&quot;)),
NOT(ISPICKVAL( Industry,&quot;Petro chemical&quot;)),
NOT(ISPICKVAL( Industry,&quot;Pharma&quot;)),
NOT(ISPICKVAL( Industry,&quot;Plastics processing&quot;)),
NOT(ISPICKVAL( Industry,&quot;Power Generation&quot;)),
NOT(ISPICKVAL( Industry,&quot;Printing&quot;)),
NOT(ISPICKVAL( Industry,&quot;Public Sector&quot;)),
NOT(ISPICKVAL( Industry,&quot;Pulp and Paper&quot;)),
NOT(ISPICKVAL( Industry,&quot;Railways&quot;)),
NOT(ISPICKVAL( Industry,&quot;Services&quot;)),
NOT(ISPICKVAL( Industry,&quot;Wood Industry&quot;)),
NOT(ISPICKVAL( Industry,&quot;Other&quot;))
)</errorConditionFormula>
        <errorDisplayField>Industry</errorDisplayField>
        <errorMessage>Please Select an Active Value for Industry</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Italy_State_validation</fullName>
        <active>true</active>
        <description>Validate Italy state name. Must be two letters for example AQ, CH, PE or TE for Abruzzo region.</description>
        <errorConditionFormula>CampaignId = &quot;&quot; &amp;&amp;  Country = &quot;Italy&quot;  &amp;&amp; CONTAINS (Text($User.sf42_Business_Unit__c) , &apos;Italy&apos;)  &amp;&amp; AND(
State != &quot;AQ&quot;, State != &quot;CH&quot;, State != &quot;PE&quot;, State != &quot;TE&quot;,
State != &quot;MT&quot;, State != &quot;PZ&quot;,
State != &quot;CZ&quot;, State != &quot;CS&quot;, State != &quot;KR&quot;, State != &quot;RC&quot;, State != &quot;VV&quot;,
State != &quot;AV&quot;, State != &quot;BN&quot;, State != &quot;CE&quot;, State != &quot;NA&quot;, State != &quot;SA&quot;,
State != &quot;BO&quot;, State != &quot;FE&quot;, State != &quot;FC&quot;, State != &quot;MO&quot;, State != &quot;PR&quot;, State != &quot;PC&quot;, State != &quot;RA&quot;, State != &quot;RE&quot;, State != &quot;RN&quot;,
State != &quot;GO&quot;, State != &quot;PN&quot;, State != &quot;TS&quot;, State != &quot;UD&quot;,
State != &quot;FR&quot;, State != &quot;LT&quot;, State != &quot;RI&quot;, State != &quot;RM&quot;, State != &quot;VT&quot;,
State != &quot;GE&quot;, State != &quot;IM&quot;, State != &quot;SP&quot;, State != &quot;SV&quot;,
State != &quot;BG&quot;, State != &quot;BS&quot;, State != &quot;CO&quot;, State != &quot;CR&quot;, State != &quot;LC&quot;, State != &quot;LO&quot;, State != &quot;MN&quot;, State != &quot;MI&quot;, State != &quot;MB&quot;, State != &quot;PV&quot;, State != &quot;SO&quot;, State != &quot;VA&quot;,
State != &quot;AN&quot;, State != &quot;AP&quot;, State != &quot;FM&quot;, State != &quot;MC&quot;, State != &quot;PU&quot;,
State != &quot;CB&quot;, State != &quot;IS&quot;,
State != &quot;AL&quot;, State != &quot;AT&quot;, State != &quot;BI&quot;, State != &quot;CN&quot;, State != &quot;NO&quot;, State != &quot;TO&quot;, State != &quot;VB&quot;, State != &quot;VC&quot;,
State != &quot;BA&quot;, State != &quot;BT&quot;, State != &quot;BR&quot;, State != &quot;FG&quot;, State != &quot;LE&quot;, State != &quot;TA&quot;,
State != &quot;CA&quot;, State != &quot;CI&quot;, State != &quot;VS&quot;, State != &quot;NU&quot;, State != &quot;OG&quot;, State != &quot;OT&quot;, State != &quot;OR&quot;, State != &quot;SS&quot;,
State != &quot;AG&quot;, State != &quot;CL&quot;, State != &quot;CT&quot;, State != &quot;EN&quot;, State != &quot;ME&quot;, State != &quot;PA&quot;, State != &quot;RG&quot;, State != &quot;SR&quot;, State != &quot;TP&quot;,
State != &quot;AR&quot;, State != &quot;FI&quot;, State != &quot;GR&quot;, State != &quot;LI&quot;, State != &quot;LU&quot;, State != &quot;MS&quot;, State != &quot;PI&quot;, State != &quot;PT&quot;, State != &quot;PO&quot;, State != &quot;SI&quot;,
State != &quot;BZ&quot;, State != &quot;TN&quot;,
State != &quot;PG&quot;, State != &quot;TR&quot;,
State != &quot;AO&quot;,
State != &quot;BL&quot;, State != &quot;PD&quot;, State != &quot;RO&quot;, State != &quot;TV&quot;, State != &quot;VE&quot;, State != &quot;VR&quot;, State != &quot;VI&quot;,
State != &quot;&quot;
)</errorConditionFormula>
        <errorDisplayField>State</errorDisplayField>
        <errorMessage>State name is not valid. Please use two-letter word.
For example AQ, CH, PE or TE for Abruzzo region.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MissingCountryOnEdit</fullName>
        <active>true</active>
        <description>Missing Country field on Edit action. Salesforce Support user is excluded because of Pardot automation on Leads with Country empty.</description>
        <errorConditionFormula>AND(
 NOT(ISNEW()),
 ISBLANK(Country),
 $User.Id &lt;&gt; &apos;00557000006lBkE&apos; 
)</errorConditionFormula>
        <errorDisplayField>Country</errorDisplayField>
        <errorMessage>Missing Country field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Lead_owner_change_by_Salesforce</fullName>
        <active>false</active>
        <description>Prevent change the Lead Owner for existing Leads by Pardot support User automation.</description>
        <errorConditionFormula>AND($User.Full_Name_for_filters__c=&quot;Salesforce Support&quot;, Owner:User.Username&lt;&gt;&quot;Salesforce Support&quot;, NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>Salesforce Support User cannot change the existing assignment</errorMessage>
    </validationRules>
</CustomObject>